--- a/figma.scss
+++ b/figma.scss
@@ -917,6 +917,8 @@
                 .s6--item1 {
                     .s6--element {
                         flex-direction: column;
+                        width: fit-content;
+                        margin: 0 40px !important;
 
                         .elm--box {
                             width: 38px;
@@ -1125,27 +1127,7 @@
             }
         }
 
-        .section6 {
-            padding-bottom: 100px;
 
-            .s6__text {
-                h2 {
-                    font-size: 1.5rem;
-                }
-
-                p {
-                    font: 0.75rem;
-                }
-            }
-
-            .s6__line {
-                padding-bottom: 250px;
-            }
-
-            .s6__img {
-                display: none !important;
-            }
-        }
     }
 
     .section2 {
@@ -1172,6 +1154,32 @@
                     }
                 }
             }
+        }
+    }
+
+    .section6 {
+        padding-bottom: 100px;
+
+        .s6__text {
+            max-width: 90% !important;
+
+            h2 {
+                margin-top: 20px;
+                font-size: 1.5rem;
+            }
+
+            p {
+                font-size: 1rem;
+                line-height: 20px;
+            }
+        }
+
+        .s6__line {
+            padding-bottom: 250px;
+        }
+
+        .s6__img {
+            display: none !important;
         }
     }
 
