--- a/figma.css
+++ b/figma.css
@@ -965,15 +965,20 @@
             flex-direction: column-reverse;
   }
   .banner .banner__flex .banner__item1 {
-    width: 70%;
+    width: 90%;
     margin-bottom: 30px;
   }
   .banner .banner__flex .banner__item1 p {
+    text-align: center;
     font-size: 2rem;
     line-height: 50px;
   }
   .banner .banner__flex .banner__item1 h1 {
     text-align: center;
+  }
+  .banner .banner__flex .banner__item1 button {
+    margin: 30px auto 0 auto;
+    display: block;
   }
   .banner .banner__flex .banner__item1 .banner--icon {
     width: 100%;
