--- a/figma.scss
+++ b/figma.scss
@@ -1,10 +1,34 @@
 * {
+    scroll-behavior: smooth;
     font-family: 'Titan One', cursive;
     margin: 0;
     padding: 0;
 }
 
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    cursor: pointer;
+
+}
+
+#overlay.on {
+    display: block;
+}
+
 .header {
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1000;
+    position: fixed;
     align-items: center;
     background-color: black;
     display: flex;
@@ -24,7 +48,14 @@
             width: 700px;
             display: flex;
             align-items: center;
+
+            a {
+                color: white;
+                text-decoration: none;
+            }
         }
+
+
 
         h5 {
             font-family: monospace;
@@ -51,12 +82,93 @@
         }
     }
 
+    #navbar-toggle {
+        display: none;
+        background-image: url(./image/open-icon.png);
+        color: white;
+        width: 30px;
+        height: 30px;
+        background-size: cover;
+        background-position: center;
+        cursor: pointer;
+        transition: 0.25s ease-in-out;
+    }
+
+
+
+
+
+    #navbar-toggle.open {
+        transform: rotate(180deg);
+        background-image: url(./image/close-icon.png);
+    }
+
 }
+
+
+
+
+#mySidenav {
+
+    overflow: hidden;
+    transform: translate(-250px, 68px);
+    z-index: 2;
+    width: 250px;
+    height: 100%;
+    background-color: black;
+    position: fixed;
+    transition: 0.25s ease-in-out;
+
+    ul {
+        justify-content: space-evenly;
+        display: flex;
+        flex-direction: column;
+
+        li {
+            margin: 20px;
+            text-decoration: none;
+
+            a {
+                font-size: 25px;
+                color: white;
+
+                text-decoration: none;
+            }
+        }
+
+        .header--button {
+            display: flex;
+            background: #ffcb31;
+            width: 150px;
+            height: 40px;
+            border-radius: 20px;
+            justify-content: center;
+            align-items: center;
+
+            h5 {
+                font-family: monospace;
+                margin: 0 5px;
+                color: black;
+                font-size: 0.8rem;
+            }
+
+
+
+        }
+    }
+}
+
+#mySidenav.openmenu {
+    width: 250px;
+    transition: 0.25s ease-in-out;
+    transform: translate(0px, 68px);
+}
+
 
 .banner {
     background-size: cover;
     background-position: center;
-    padding: 54px 0px;
+    padding: 100px 0px;
     background-image: url(./image/background1.png);
 
     .banner__flex {
@@ -769,7 +881,19 @@
                 display: none;
             }
         }
+
+        .header--button {
+            display: none;
+        }
+
+        #navbar-toggle {
+            display: flex;
+        }
+
+
     }
+
+    #mySidenav {}
 
     .banner {
         .banner__flex {
@@ -1118,6 +1242,10 @@
 }
 
 @media screen and (max-width:400px) {
+    #menu-open {
+        width: 100%;
+    }
+
     .section1 {
         padding-bottom: 30px;
 
