--- a/figma.css
+++ b/figma.css
@@ -221,13 +221,14 @@
   display: -ms-flexbox;
   display: flex;
   width: 70%;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 20px;
+  height: 32px;
 }
 .banner .banner__flex .banner__item2 {
   -webkit-box-align: end;
