--- a/figma.scss
+++ b/figma.scss
@@ -292,7 +292,7 @@
 
         .s1__item2 {
             width: 50%;
-            color: red;
+            color: white;
             box-sizing: border-box;
             padding: 0 82px;
 
